[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradio-osc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Unlicense"
keywords = []
authors = [
  { name = "elgiano", email = "elgiano@gmail.com" },
]
dependencies = [
  'gradio-client',
  'python-osc',
  'numpy<2.0',
  'librosa', # for examples: sample_slicer
]

[project.urls]
Documentation = "https://github.com/elgiano/gradio-osc#readme"
Issues = "https://github.com/elgiano/gradio-osc/issues"
Source = "https://github.com/elgiano/gradio-osc"

[project.scripts]
gradio-osc = "gradio_osc:main"

[tool.hatch.version]
path = "src/gradio_osc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [ "mypy>=1.0.0", ]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gradio_osc tests}"

[tool.coverage.run]
source_pkgs = ["gradio_osc", "tests"]
branch = true
parallel = true
omit = [
  "src/gradio_osc/__about__.py",
]

[tool.coverage.paths]
gradio_osc = ["src/gradio_osc", "*/gradio-osc/src/gradio_osc"]
tests = ["tests", "*/gradio-osc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
